Fix tab closing with multiple viewspaces

Sometimes a viewspace has only view available but multiple docs (and
tabs for those docs).

BUG: 453716